[gd_scene load_steps=3 format=3 uid="uid://civwmv5k2e5rl"]

[ext_resource type="Script" path="res://stack_screen.gd" id="1_a21pp"]
[ext_resource type="PackedScene" uid="uid://bewuefnblvty0" path="res://my_button.tscn" id="2_lf404"]

[node name="StackScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a21pp")

[node name="DropZone" type="Control" parent="."]
anchors_preset = 0
offset_left = 170.0
offset_top = 110.0
offset_right = 790.0
offset_bottom = 370.0

[node name="DropButton" parent="." instance=ExtResource("2_lf404")]
layout_mode = 0
offset_left = 360.0
offset_top = 410.0
offset_right = 440.0
offset_bottom = 490.0
text = "DROP"
